Update Verifier